# agent-teams-playground

./: .gitignore  Makefile  README.md
app/: .gitignore  Makefile  pyproject.toml
app/src/app/: __init__.py
app/src/collector/: __init__.py
app/src/commit_prefix/: __init__.py
